<resources>
    <string name="app_name">NotiLocations</string>
    <string name="tasks">Tasks</string>
    <string name="create_task">Create task</string>
    <string name="titleTextView">Task title</string>
    <string name="title_input">task</string>
    <string name="descriptionTextView">Description</string>
    <string name="add_task">Add Task</string>
    <string name="submitTask">"Submit"</string>
    <string name="notilocations">Notilocations</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="addLocation">Add a location</string>
    <string name="date">date</string>
    <string name="taskTitle">Title</string>
    <string name="taskDescription">description</string>
    <string name="applyChanges">Apply</string>
    <string name="updateLocation">Update Location</string>
    <string name="deleteButton">Delete</string>
...
    <string name="triggerOnExitText">Trigger notification on exiting location</string>
    <string name="snackbarItemRemoved">1 item removed</string>
    <string name="snackbarItemUpdated">1 item completed</string>
    <string name="snackbarUndo">UNDO</string>
    <string name="submitContentDescription">Submit</string>
    <string name="deleteContentDescription">Delete</string>
    <string name="settingsDescription">Go to settings</string>
    <string name="addDescription">Add a task</string>
    <string name="addATask">Task list is empty</string>
    <string name="confirmLocation">Confirm Location?</string>

</resources>
