...
            <TextView
                android:id="@+id/taskDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding"
                android:layout_marginTop="16dp"
                android:labelFor="@id/description_input"
                android:text="@string/descriptionTextView"
                android:textColor="@color/secondary_text_material_light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.047"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_input" />
...

            <TextView
                android:id="@+id/distanceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding"
                android:labelFor="@id/distanceInput"
                android:text="@string/triggerDistanceText"
                android:textColor="@color/secondary_text_material_light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/taskDescription"
                app:layout_constraintTop_toBottomOf="@+id/description_input" />
...
